Updated html and javascript to accept cooking measurements and return the appropriate converted measurement

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       </div>
       <form id="pintToLiter">
         <div class="form-group">
-          <label for="pintToLiter">Volume in pints:</label>
-          <input id="pintToLiter" class="form-control" type="text">
+          <label for="pints">Volume in pints:</label>
+          <input id="pints" class="form-control" type="text">
         </div>
         <button type="submit" class="btn">Convert to liters!</button>
       </form>
